# JobSense

./: .env.example  .gitignore  readme.md
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 507fcc06d1df_initial_schema.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  agent_log.py  application.py  feedback.py  interview.py  job.py  suggestion.py  user.py
backend/app/routers/: health.py  jobs.py  profile.py
backend/app/schemas/: job.py  preferences.py  restrictions.py
backend/app/utils/: resume_parser.py
backend/tests/: test_health.py
frontend/: package-lock.json
frontend/src/: App.jsx
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-06-14-phase-0-project-bootstrap/: plan.md  requirements.md  validation.md
specs/2026-06-14-phase-1-database-connection/: plan.md  requirements.md  validation.md
specs/2026-06-15-phase-2-resume-upload/: plan.md  requirements.md  validation.md
specs/2026-06-15-phase-3-user-preferences/: plan.md  requirements.md  validation.md
specs/2026-06-15-phase-4-contract-restrictions/: plan.md  requirements.md  validation.md
specs/2026-06-15-phase-5-manual-job-entry/: plan.md  requirements.md  validation.md
specs/2026-06-15-phase-6-job-list-view/: plan.md  requirements.md  validation.md
specs/2026-06-15-phase-7-job-detail-page/: plan.md  requirements.md  validation.md
specs/2026-06-15-phase-8-job-status-update/: plan.md  requirements.md  validation.md
specs/2026-06-15-phase-9-delete-job/: plan.md  requirements.md  validation.md
(+19 files in other folders)
